test/mpi/errors/cxx/io/.cvsignore
*.o
Makefile.in
Makefile
*ebug*
*elease*
*.vcproj
*.gcda
*.gcno
